--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    <script>
 if('serviceWorker' in navigator) {
   navigator.serviceWorker
-           .register('sw.js')
+           .register('/https://github.com/SIonut0122/restaurant-review/sw.js', {scope: '/https://github.com/SIonut0122/restaurant-review/'})
            .then(function() { console.log("Service Worker Registered"); });
 }
 </script>
