--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <link rel="canonical" href="https://sionut0122.github.io/restaurant-review/" />
+  <link rel="canonical" href="https://github.com/SIonut0122/restaurant-review/" />
    
    
   <title>Restaurant Reviews</title>
@@ -49,7 +49,7 @@
    <script>
 if('serviceWorker' in navigator) {
   navigator.serviceWorker
-           .register('/https://sionut0122.github.io/restaurant-review/sw.js', {scope: '/https://sionut0122.github.io/restaurant-review/'})
+           .register('/https://github.com/SIonut0122/restaurant-review/sw.js', {scope: '/https://github.com/SIonut0122/restaurant-review/'})
            .then(function() { console.log("Service Worker Registered"); });
 }
 </script>
