--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    <script>
 if('serviceWorker' in navigator) {
   navigator.serviceWorker
-           .register('/https://github.com/SIonut0122/restaurant-review/sw.js', {scope: '/https://github.com/SIonut0122/restaurant-review/'})
+           .register('./restaurant-review/sw.js', {scope: './restaurant-review/'})
            .then(function() { console.log("Service Worker Registered"); });
 }
 </script>
